docs/css/styles.css
* {
  box-sizing: border-box; }

body {
  font-family: 'Open Sans', Arial, sans-serif;
  margin: 0; }

.btn {
  background: white;
  color: #282828;
  cursor: pointer;
  border: 1px solid #282828; }

.btn-xs {
  font-size: 12px;
  padding: 4px 16px; }

.btn-sm {
  font-size: 14px;
  padding: 8px 24px; }

.btn-md {
  font-size: 16px;
  padding: 12px 32px; }

.btn-lg {
  font-size: 20px;
  padding: 16px 48px; }

.btn-xl {
  font-size: 24px;
  padding: 24px 64px; }

.btn-br-1 {
  border-radius: 2px; }

.btn-br-2 {
  border-radius: 5px; }

.btn-br-3 {
  border-radius: 10px; }

.btn-br-4 {
  border-radius: 25px; }

.btn-br-5 {
  border-radius: 50px; }

.btn-solid {
  background-color: #282828;
  color: #f5f5f5; }

.btn-outline {
  border: 2px solid #282828; }

.btn-ani-opp {
  transition: 0.2s background-color, 0.2s color; }

.btn-ani-opp:hover {
  background-color: #282828;
  color: white; }

.btn-ani-opp:hover.btn-solid {
  background-color: white;
  color: #282828; }

.btn-ani-raise {
  transition: 0.2s transform, 0.2s box-shadow; }

.btn-ani-raise:hover {
  transform: translateY(-2px);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25); }

.btn-ani-raise:active {
  transform: translateY(0);
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25); }

.btn-ani-switch {
  position: relative; }

.btn-ani-switch:hover .btn-ani-switch-visible {
  visibility: hidden;
  opacity: 0; }

.btn-ani-switch:hover .btn-ani-switch-hidden {
  visibility: visible;
  opacity: 1; }

.btn-ani-switch-visible {
  transition: 0.2s visibility, 0.2s opacity; }

.btn-ani-switch-hidden {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  backface-visibility: hidden;
  visibility: hidden;
  opacity: 0;
  transition: 0.2s visibility, 0.2s opacity; }

.container {
  padding: 0 32px;
  margin: 0 auto; }
  @media (min-width: 768px) {
    .container {
      width: 750px; } }
  @media (min-width: 992px) {
    .container {
      width: 970px; } }
  @media (min-width: 1200px) {
    .container {
      width: 1170px; } }

.header-light-1,
.header-light-2,
.header-light-3,
.header-light-4,
.header-light-5 {
  font-weight: 400; }

.header-dark-1,
.header-dark-2,
.header-dark-3,
.header-dark-4,
.header-dark-5 {
  font-weight: 700; }

.header-light-1,
.header-dark-1 {
  font-size: 24px; }

.header-light-2,
.header-dark-2 {
  font-size: 30px; }

.header-light-3,
.header-dark-3 {
  font-size: 36px; }

.header-light-4,
.header-dark-4 {
  font-size: 48px; }

.header-light-5,
.header-dark-5 {
  font-size: 60px; }

.placeholder {
  width: 640px;
  max-width: 90vw;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start; }

.ph-line {
  background-color: #f5f5f5;
  height: 16px;
  margin-bottom: 12px; }

.ph-line:nth-of-type(1) {
  width: 93%; }

.ph-line:nth-of-type(2) {
  width: 97%; }

.ph-line:nth-of-type(3) {
  width: 88%; }

.ph-line:nth-of-type(4) {
  width: 82%; }

.ph-line:nth-of-type(5) {
  width: 81%; }

.ph-line:nth-of-type(6) {
  width: 90%; }

.ph-line:nth-of-type(7) {
  width: 79%; }

.ph-line:nth-of-type(8) {
  width: 83%; }

.ph-line:nth-of-type(9) {
  width: 95%; }

.ph-line:nth-of-type(10) {
  width: 96%; }

.ph-header {
  margin-bottom: 8px;
  width: 100%; }
  .ph-header .ph-line {
    height: 24px; }

.ph-paragraph {
  margin-bottom: 4px;
  width: 100%; }
  .ph-paragraph .ph-line {
    height: 16px; }

.ph-image {
  background-color: #f5f5f5;
  height: 100%;
  width: 100%; }

.ph-image-paragraph {
  margin-bottom: 4px;
  width: 100%;
  position: relative;
  z-index: -1; }
  .ph-image-paragraph .ph-image {
    height: 72px;
    width: 72px;
    margin-right: 16px; }
  .ph-image-paragraph .ph-line {
    height: 16px; }
  .ph-image-paragraph .ph-line:nth-of-type(1),
  .ph-image-paragraph .ph-line:nth-of-type(2),
  .ph-image-paragraph .ph-line:nth-of-type(3) {
    margin-left: 88px; }
  .ph-image-paragraph .ph-lines {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0; }

.shadow-sm {
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25); }

.shadow-md {
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25); }

.shadow-lg {
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25); }

.shadow-down {
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25); }

.shadow-up {
  box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.25); }

.shadow-left {
  box-shadow: -2px 0px 4px rgba(0, 0, 0, 0.25); }

.shadow-right {
  box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.25); }

.alert {
  text-align: center;
  padding: 16px;
  margin: 16px;
  border-radius: 5px; }

.alert-light {
  border: 1px solid #BCBCBC;
  color: #666666; }

.alert-dark {
  background-color: #f5f5f5;
  border: 1px solid #949494;
  color: #282828; }

.alert-blue {
  background-color: #EFF8FF;
  border: 1px solid #3A80C7;
  color: #223C54; }

.alert-green {
  background-color: #E7FFFE;
  border: 1px solid #40ADA3;
  color: #134343; }

.alert-orange {
  background-color: #fffcf4;
  border: 1px solid #F1CB66;
  color: #5B4915; }

.alert-red {
  background-color: #FCE8E8;
  border: 1px solid #DA3B34;
  color: #5F1B18; }

html {
  scroll-behavior: smooth; }

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding: 48px 0; }

.content__header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin-top: 32px;
  margin-bottom: 16px;
  color: #282828; }

.content__title {
  font-weight: 400;
  font-size: 30px;
  margin: 0; }

.content__title--main {
  font-size: 48px; }

.content__info {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-weight: 300;
  font-size: 18px; }

.content__info--main {
  font-size: 24px; }

.section {
  margin: 16px auto; }

.subheader {
  font-weight: 400;
  font-size: 24px;
  color: #282828;
  text-align: center; }

.nav {
  height: 70px;
  width: 100vw;
  padding: 0 96px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 3; }

.nav__background {
  width: 100vw;
  height: 70px;
  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
  position: fixed;
  top: 0;
  left: 0;
  right: 0; }

.nav__brand {
  color: white;
  font-size: 30px;
  font-weight: 400;
  font-family: Open Sans;
  text-decoration: none; }

.nav__menu {
  height: 100%;
  width: 49px;
  z-index: 1; }

.nav__bar {
  height: 3px;
  width: 100%;
  margin: 15px 0;
  background-color: white; }

.nav__bar--1,
.nav__bar--3 {
  width: 50%; }

.nav__bar--1 {
  margin-left: auto;
  transform-origin: top right;
  transition: 0.3s transform; }

.nav__bar--2 {
  transition: 0.3s transform; }

.nav__bar--3 {
  transform-origin: bottom left;
  transition: 0.3s transform; }

.nav__menu--active .nav__bar--1 {
  transform: translate(-8px, 1px) rotate(-45deg); }

.nav__menu--active .nav__bar--2 {
  transform: rotate(45deg); }

.nav__menu--active .nav__bar--3 {
  transform: translate(8px, -1px) rotate(-45deg); }

.nav__close-area {
  position: fixed;
  top: 0;
  bottom: 0;
  height: 100vh;
  width: 100vw;
  left: auto;
  right: 0;
  pointer-events: none;
  z-index: -1; }

.nav__drawer {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 600px;
  max-width: 90vw;
  background: linear-gradient(to right, #71D5D3, #40ADA3);
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
  padding: 64px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  transform-origin: right;
  transform: scaleX(0);
  transition: 0.3s transform; }
  @media (max-width: 460px) {
    .nav__drawer {
      padding: 48px; } }

.nav__drawer--active {
  transform: scaleX(1); }
  .nav__drawer--active .nav__close-area {
    pointer-events: all; }
  .nav__drawer--active .nav__links {
    opacity: 1; }
  .nav__drawer--active .nav__socials {
    opacity: 1; }

.nav__links {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  opacity: 0;
  transition: 0.3s opacity;
  list-style: none; }

.nav__header {
  color: white;
  font-size: 30px;
  font-family: Open Sans;
  font-weight: 600;
  margin: 24px 0; }

.nav__link {
  text-decoration: none;
  color: white;
  font-size: 24px;
  font-family: Roboto;
  font-weight: 300;
  margin-bottom: 8px; }

.hero {
  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
  z-index: 2;
  position: relative;
  padding: 96px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center; }

.hero__header {
  color: white;
  font-family: Open Sans;
  font-size: 60px;
  font-weight: 400;
  margin-top: 0;
  margin-bottom: 16px; }

.hero__subheader {
  color: white;
  font-family: Roboto;
  font-size: 30px;
  font-weight: 300;
  margin: 0; }

.hero__button {
  background: linear-gradient(to bottom, #71D5D3, #40ADA3);
  border: 2px solid white;
  font-family: Open Sans;
  font-weight: 300;
  font-size: 24px;
  color: white;
  border-radius: 5px;
  margin-top: 32px;
  padding: 8px 64px; }

.buttons {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 800px;
  max-width: 90vw; }

.container__contents {
  height: 40vh;
  width: 100%;
  background-color: #f5f5f5;
  display: flex;
  align-items: center;
  justify-content: center; }

.container__header {
  font-weight: 300;
  text-align: center; }

.headers {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 80vw; }

.headers__left,
.headers__right {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center; }
  .headers__left h4,
  .headers__right h4 {
    text-align: center;
    margin: 8px; }

.image-container {
  height: 300px;
  width: 300px; }

.shadow-boxes {
  display: flex;
  align-items: center;
  justify-content: space-evenly; }

.shadow-box {
  height: 200px;
  width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 16px; }

